<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        app:layout="@layout/custom_preference_category"
        app:title="@string/category_ui">

        <ListPreference
            android:defaultValue="@string/theme_pref_light"
            app:dialogTitle="@string/theme_pref_title"
            app:entries="@array/themeListArray"
            app:entryValues="@array/themeEntryArray"
            app:key="@string/theme_pref"
            app:title="@string/theme_pref_title"
            app:useSimpleSummaryProvider="true" />

        <Preference
            app:enableCopying="true"
            app:icon="@drawable/ic_colorize"
            app:key="@string/accent_pref"
            app:title="@string/accent_pref_title" />

    </PreferenceCategory>

    <PreferenceCategory
        app:layout="@layout/custom_preference_category"
        app:title="@string/category_audio">

        <Preference
            android:enabled="false"
            android:summary="@string/eq_pref_note_summary"
            app:title="@string/equalizer" />


    </PreferenceCategory>
</androidx.preference.PreferenceScreen>